@@ -21,7 +21,6 @@ pipeline {
                         sh 'echo $sonar_scanner'
                         sh """
                         ${env.sonar_scanner} \\
-                        --add-opens java.base/java.lang=ALL-UNNAMED \\
                         -Dsonar.projectKey=totallyspies \\
                         -Dsonar.projectName=totallyspies \\
                         -Dsonar.projectVersion=1.0 \\
